2007-09-19 Jan Kryl (version 1.1.3)

	* Fix bashism in Makefile (output redirection).

2007-06-21 Jan Kryl (version 1.1.2)

	* Makefile variable DESTDIR is honored.

2007-06-11 Jan Kryl (version 1.1.1)

	* Enhancement of configure script.

	* More complete documentation.

2007-03-21 Jan Kryl (version 1.1.0)

	* CORBA object can be specified including its context, which
	was not possible till now. If context is not specified, the
	default 'fred' context is assumed. This was the change is
	backward compatible with old behaviour.

version 1.0.0

	* First version of mod_corba, creation of this ChangeLog