@@ -1,3 +1,8 @@
+2008-01-07 Jiri Sadek
+	
+	* Caching IOR string insted of asking CORBA nameservice on
+	each connection for resolving reference
+
 2007-09-19 Jan Kryl (version 1.1.3)
 
 	* Fix bashism in Makefile (output redirection).
